<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentView"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.OrderActivity">

    <include layout="@layout/toolbar" android:id="@+id/toolbarLayout"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_products"
        android:layout_below="@id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_cart"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp"
        app:cardMaxElevation="16dp"
        app:cardUseCompatPadding="true"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <RelativeLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/total_text"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/blue_700"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_harga" />

            <Button
                android:id="@+id/order"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:background="@color/yellow_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/total_price"
                android:layout_below="@id/total_text"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/yellow_200"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>