<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardElevation="16dp"
        app:cardMaxElevation="16dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_product"
                android:contentDescription="@string/app_name"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_launcher_background"/>

            <TextView
                android:id="@+id/title_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/img_product"
                android:layout_toEndOf="@id/img_product"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="9pt"/>

            <TextView
                android:id="@+id/price_product"
                android:layout_marginRight="7dp"
                android:layout_marginEnd="7dp"
                android:layout_toRightOf="@id/img_product"
                android:layout_toEndOf="@id/img_product"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_product"
                android:text="@string/app_name"/>

            <TextView
                android:id="@+id/category_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_product"
                android:layout_toRightOf="@id/price_product"
                android:layout_toEndOf="@id/price_product"
                android:text="@string/app_name"
                android:maxLength="30"/>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_below="@id/category_product"
                android:layout_toRightOf="@id/img_product"
                android:layout_toEndOf="@id/img_product"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_minus_cart"
                    android:background="@color/yellow_200"
                    android:layout_width="43dp"
                    android:layout_height="43dp"
                    android:text="@string/minus_text"/>

                <TextView
                    android:id="@+id/nums_items"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:maxLength="2"/>

                <Button
                    android:id="@+id/btn_plus_cart"
                    android:background="@color/blue_500"
                    android:layout_width="43dp"
                    android:layout_height="43dp"
                    android:text="@string/plus_text"/>
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>